tests/parser/define-type.8.bad.error
error: Invalid type variable
  --> test:4:16
   |
 4 |  (define-type (T (:a)))
   |                  ^^^^ expected keyword symbol
